--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^3.4.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
