--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-notifications-component": "^3.1.0",
     "swr": "^1.0.1"
   },
   "devDependencies": {
